@@ -31,6 +31,10 @@ if (Sys.getenv("Run_RPushbullet_Tests")=="yes") {
     ## Post a note item
     str(fromJSON(pbPost("note", "simple Test", "We think this should work.\nWe really do.")))
 
+    ## Post a URL
+    str(fromJSON(pbPost(type="link", body="Some URL", title="Some title",
+                        url="http://cran.r-project.org/package=RPushbullet")))
+    
     ## Post a file
     str(fromJSON(pbPost(type="file", url=system.file("DESCRIPTION", package="RPushbullet"))))
 
